fix: remove scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -43,26 +43,11 @@ body {
   overflow-x: scroll;
   height: 540px;
   width: 550px;
+  scrollbar-width: none;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 1px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #555;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #333;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #222;
+body::-webkit-scrollbar {
+  display: none;
 }
 
 h1 {
